# py

./: README.md  pyproject.toml
data/: users.txt
data/user_profiles/: alice.json  bob.json
docs/: IMPLEMENTATION.md  index.md
lessons/: __init__.py
lessons/01_basics/: README.md  __init__.py  exercise.py
lessons/lesson01_basics/: __init__.py  exercise.py
source/: pyvenv.cfg
src/: __init__.py  main.py
tests/: test_lesson1.py  test_main.py
webapp/: __init__.py  app.py
webapp/controllers/: __init__.py  auth.py  profile.py
webapp/models/: __init__.py  profiles.py  users.py
webapp/services/: __init__.py  utils.py
webapp/templates/: login.html  profile.html
