[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mi_proyecto_python"
version = "0.1.0"
description = "Proyecto de ejemplo para aprender Python"
authors = [ { name = "Tu Nombre" } ]

[project.dependencies]
# Añade dependencias aquí
pytest = {version = "^7.0", optional = false}
